welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var n:Int=0
	if (a<=13 && a>=19) {return n+1}
	if (b<=13 && b>=19) {return n+1}
	if (c<=13 && c>=19) {return n+1}
	if (d<=13 && d>=19) {return n+1}
	else{return n=0}
	return n
}
